Build libserialport.so for Linux

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -16,8 +16,9 @@ target_include_directories(${PLUGIN_NAME} INTERFACE
 target_link_libraries(${PLUGIN_NAME} PRIVATE flutter)
 target_link_libraries(${PLUGIN_NAME} PRIVATE PkgConfig::GTK)
 
-# List of absolute paths to libraries that should be bundled with the plugin
 set(flutter_serial_port_bundled_libraries
-  ""
+  "$<TARGET_FILE:serialport>"
   PARENT_SCOPE
 )
+
+add_subdirectory(libserialport)
