Use libserialport from CocoaPods on macOS
Fix: #2

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,5 +27,7 @@ flutter:
         package: org.sigrok.flutter_serial_port
       linux:
         pluginClass: FlutterSerialPortPlugin
+      macos:
+        pluginClass: FlutterSerialPortPlugin
       windows:
         pluginClass: FlutterSerialPortPlugin
