--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,19 @@
 name: flutter_serial_port
 description: A simple wrapper around dart_serial_port utilizing Flutter's
   build system to build and deploy libserialport for the target platform.
-version: 0.1.0-nullsafety.0
+version: 0.1.0
 homepage: https://github.com/jpnurmi/flutter_serial_port
 repository: https://github.com/jpnurmi/flutter_serial_port
 issue_tracker: https://github.com/jpnurmi/flutter_serial_port/issues
 
 environment:
-  sdk: '>=2.12.0-259.9.beta <3.0.0'
-  flutter: '>=1.20.0 <2.0.0'
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  dart_serial_port: ^0.1.0-nullsafety
+  dart_serial_port: ^0.1.0
 
 dev_dependencies:
   flutter_test:
