--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: flutter_serial_port
+name: flutter_serialport
 description: A simple wrapper around libserialport utilizing Flutter's
   build system to build and deploy the C-library for the target platform.
 version: 0.1.0
-homepage: https://github.com/jpnurmi/flutter_serial_port
-repository: https://github.com/jpnurmi/flutter_serial_port
-issue_tracker: https://github.com/jpnurmi/flutter_serial_port/issues
+homepage: https://github.com/jpnurmi/flutter_serialport
+repository: https://github.com/jpnurmi/flutter_serialport
+issue_tracker: https://github.com/jpnurmi/flutter_serialport/issues
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
