--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="org.sigrok.flutter_serialport">
+  package="org.sigrok.flutter_libserialport">
 </manifest>
