--- a/example/linux/CMakeLists.txt
+++ b/example/linux/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
-set(BINARY_NAME "flutter_serialport_example")
-set(APPLICATION_ID "com.example.flutter_serialport")
+set(BINARY_NAME "flutter_libserialport_example")
+set(APPLICATION_ID "com.example.flutter_libserialport")
 
 cmake_policy(SET CMP0063 NEW)
 
