--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_serialport_example
-description: Demonstrates how to use the flutter_serialport plugin.
+name: flutter_libserialport_example
+description: Demonstrates how to use the flutter_libserialport plugin.
 publish_to: 'none'
 
 environment:
@@ -8,7 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_serialport:
+  flutter_libserialport:
     path: ../
 
 flutter:
