--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  libserialport: ^0.2.0
+  libserialport: ^0.2.0+3
 
 dev_dependencies:
   flutter_test:
