--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,8 @@
 group 'org.sigrok.flutter_libserialport'
-version '1.0-SNAPSHOT'
+version '0.5.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.9.20'
+    ext.kotlin_version = '2.0.0'
     repositories {
         google()
         jcenter()
@@ -25,7 +25,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
+    namespace 'org.sigrok.flutter_libserialport'
+    compileSdk 34
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
